@@ -100,6 +100,15 @@ to connect to. The default for this is the C<domain> of the C<jid>.
 B<NOTE:> To disable DNS SRV lookup you need to specify the port B<number>
 yourself. See C<port> below.
 
+=item use_host_as_sasl_hostname => $bool
+
+This is a special parameter for people who might want to use GSSAPI SASL
+mechanism. It will cause the value of the C<host> parameter (see above) to be
+passed to the SASL mechanisms, instead of the C<domain> of the JID.
+
+This flag is provided until support for XEP 0233 is deployed, which
+will fix the hostname issue w.r.t. GSSAPI SASL.
+
 =item port => $port
 
 This is optional, the default value for C<$port> is 'xmpp-client=5222', which
@@ -639,7 +648,12 @@ sub send_sasl_auth {
    }
 
    $self->{writer}->send_sasl_auth (
-      [map { $_->text } @mechs], $self->{username}, $self->{host}, $self->{password}
+      [map { $_->text } @mechs],
+      $self->{username},
+      ($self->{use_host_as_sasl_hostname}
+         ? $self->{host}
+         : $self->{domain}),
+      $self->{password}
    );
 }
 
